Fix masthead overlap spacing

--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -17,7 +17,7 @@
     height: 100vh;
     overflow-y: auto;               // Add scrollbar if the sidebar is too long
     position: fixed;
-    padding-top: $masthead-height;
+    padding-top: var(--masthead-offset, #{$masthead-height});
   }
 
   @include breakpoint($large) {
